Refactor App and ClassGroup classes; enhance output formatting and update sorting and top student retrieval methods